--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ProlificApp</string>
+    <string name="book_tag">Tag:</string>
+    <string name="book_checked_out">Last Checked Out:</string>
+    <string name="book_checkout">Checkout</string>
 </resources>
